# fileship_auth

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
src/: db.rs  error.rs  main.rs
src/models/: user.rs
src/routes/: mod.rs
src/services/: auth_service.rs
