[package]
name = "fileship_auth_hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.30", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenvy = "0.15"
futures-util = "0.3.30"
thiserror = "1.0"
chrono = "0.4.19"